# ai-datalake-platform

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml  requirements.txt
.claude/: CLAUDE.template.md  TRIMARAN_CHECKLIST.md  settings.json
.claude/agents/: build-validator.md  code-reviewer.md  planner.md  self-improvement.md
.claude/commands/: commit-push-pr.md  pipeline-health.md  review-changes.md  run-tests.md
.claude/skills/: data-pipeline-tdd.md  data-triangulation.md  self-improvement-loop.md
config/: claude_config.yaml  mcp_config.json  pipeline_config.yaml
data/: sample_api_response.json  sample_crm_contacts.json  sample_erp_transactions.csv
data/expected_outputs/: gold_daily_metrics.json
dbt/: dbt_project.yml  profiles.yml
dbt/models/bronze/: stg_raw_transactions.sql
dbt/models/gold/: fct_daily_metrics.sql
dbt/models/silver/: int_cleaned_transactions.sql
docs/: architecture.md  claude_workflows.md  mcp_integration.md  medallion_design.md
infrastructure/cloudformation/: datalake_stack.yaml
infrastructure/glue_jobs/: etl_silver_transform.py
src/: __init__.py
src/ai/: __init__.py  claude_client.py  data_analyzer.py  insight_generator.py  quality_advisor.py  query_generator.py
src/analytics/: __init__.py  aggregations.py  kpi_calculator.py  report_generator.py
src/ingestion/: __init__.py  api_connector.py  base_connector.py  crm_connector.py  csv_ingestion.py  erp_connector.py  oggi_s3_connector.py
src/mcp_server/: __init__.py  server.py
src/pipeline/: __init__.py  config.py  orchestrator.py
src/transformation/: __init__.py  data_quality.py  deduplication.py  schema_enforcer.py  spark_processor.py
tests/: conftest.py  test_ai_integration.py  test_ingestion.py  test_mcp_server.py  test_oggi_connector.py  test_transformation.py
