[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "ai-datalake-platform"
version = "1.0.0"
description = "AI-Powered Data Lake Platform using Claude/Anthropic for intelligent data engineering"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Emanuel", email = "emanuel@example.com"},
]
keywords = [
    "data-engineering",
    "data-lake",
    "anthropic",
    "claude",
    "aws",
    "mcp",
    "medallion-architecture",
    "etl",
    "spark",
    "dbt",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Database :: Database Engines/Servers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "anthropic>=0.39.0",
    "boto3>=1.34.0",
    "pandas>=2.1.0",
    "pyarrow>=14.0.0",
    "pyspark>=3.5.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "jsonschema>=4.20.0",
    "requests>=2.31.0",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "moto[s3,glue,athena]>=5.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[project.scripts]
datalake-pipeline = "src.pipeline.orchestrator:main"
mcp-server = "src.mcp_server.server:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src --cov-report=term-missing"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
